overflow fix

--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
 }
 
 body {
+    overflow-x: hidden;
     font-family: 'Poppins', sans-serif;
     background-color: white;
 }
@@ -538,7 +539,7 @@ button.sign-in:hover {
 }
 
 .hire-banner-wrapper {
-    width: 720px;
+    max-width: 720px;
     height: 220px;
     margin-right: auto;
     margin-left: auto;
